5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1593_820.log
== TEST (2019-03-21 20:59:18) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_Rs50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = resto_Rs50 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas_Rs50 = valor // 50
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 20:59:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_Rs50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = resto_Rs50 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:00:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_Rs50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs50 = valor % 50

# Quantidade de notas de R$ 10
notas_Rs10 = resto_Rs50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_Rs10 = resto_Rs50 % 10

# Quantidade de notas de R$ 2
notas_Rs2 = resto_Rs10 // 2

print(int(notas_Rs50))
print(int(notas_Rs10))
print(int(notas_Rs2))

-- EXECUTION TIME:
0.159931
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
